--- a/go6percent/scss/layout/_header.scss
+++ b/go6percent/scss/layout/_header.scss
@@ -34,15 +34,6 @@ header{
 		cursor: pointer;
 	}
 }
-.navigation_fixed{
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	background: rgb(117, 17, 87);
-	z-index: 6;
-}
 .headertop{
 	padding: 25px 0;
 	box-shadow: 0px 1px 0px 0px rgba(255,255,255,1);
@@ -63,6 +54,10 @@ header{
 			border: 2px solid #fff;
 			border-radius: 100%;
 			margin-right: 9px;
+			&:hover{
+				transition: 1s;
+				border-style: dashed;
+			}
 		}
 	}
 	&__info{
@@ -242,7 +237,63 @@ header{
 			color: #fff;
 			text-transform: uppercase;
 			font: 15px RM;
+			position: relative;
+			&:hover{
+				&:after{
+					opacity: 1;
+				    -webkit-transform: translateY(0px);
+				    -moz-transform: translateY(0px);
+				    transform: translateY(0px);
+				}
+			}
+			&:after{
+				position: absolute;
+			    top: 100%;
+			    left: 0;
+			    width: 100%;
+			    height: 2px;
+			    background: rgba(255,255,255,0.8);
+			    content: '';
+			    opacity: 0;
+			    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+			    -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+			    transition: opacity 0.3s, transform 0.3s;
+			    -webkit-transform: translateY(10px);
+			    -moz-transform: translateY(10px);
+			    transform: translateY(10px);
+			}
 		}
+	}
+}
+.navigation_fixed{
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background: rgb(117, 17, 87);
+	background: linear-gradient(to right,#3a1439,#791259);
+	z-index: 6;
+	margin-bottom: 12px;
+	padding: 8px 0;
+	opacity: 0.9;
+	.headernav{
+		&__logo{
+			height: 52%;
+		}
+	}
+	.logo{
+		max-width: 160px;
+	}
+	.item1{
+		max-width: 31px;
+		top: 10px;
+    	left: 39px;
+	}
+	.item2{
+		top: 3px;
+    	left: 32px;
+    	max-width: 46px;
 	}
 }
 .logo{
