--- a/go6percent/css/style.css
+++ b/go6percent/css/style.css
@@ -164,7 +164,7 @@ header {
   -webkit-order: 1;
   background: url(../img/banner.jpg) center center no-repeat;
   background-size: cover;
-  padding-bottom: 125px;
+  padding-bottom: 100px;
 }
 
 .mainbutt {
@@ -488,6 +488,29 @@ header {
   margin-bottom: 10px;
 }
 
+.slick-dots {
+  text-align: center;
+  margin-top: 25px;
+}
+.slick-dots li {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  background: #fff;
+  border: 0;
+  margin: 0 5px;
+}
+.slick-dots li button {
+  width: 10px !important;
+  padding: 0;
+  height: 10px;
+  border: 0;
+  border-radius: 100%;
+  background: #fff;
+  text-indent: 9999px;
+}
+
 @media screen and (min-width: 992px) and (max-width: 1200px) {
   .headernav__navigation a {
     font-size: 14px;
@@ -623,6 +646,29 @@ footer {
 .footertop__a {
   font: 15px RM;
   color: #fff;
+  position: relative;
+}
+.footertop__a:hover:after {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  transform: translateY(0px);
+}
+.footertop__a:after {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: rgba(255, 255, 255, 0.8);
+  content: '';
+  opacity: 0;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  -webkit-transform: translateY(10px);
+  -moz-transform: translateY(10px);
+  transform: translateY(10px);
 }
 
 .footerbott {
@@ -821,7 +867,8 @@ h3 {
   padding: 40px 0;
 }
 .variants__item:hover {
-  margin-top: -20px;
+  transform: scale(1.05);
+  z-index: 5;
   transition: 1s;
 }
 .variants__cont {
@@ -933,10 +980,12 @@ h3 {
 }
 .variant_1 {
   margin-right: -1px;
+  background: #fff;
 }
 .variant_2 {
   padding-bottom: 55px;
   box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.15);
+  background: #fff;
 }
 .variant_2 .variant__top {
   background: url(../img/mb2.jpg) bottom center no-repeat;
@@ -952,12 +1001,12 @@ h3 {
   margin-top: 9px;
 }
 .variant_2:hover {
-  width: 360px;
-  margin-top: 0;
-  transition: 0.6s;
+  transform: scale(1.05);
+  z-index: 5;
 }
 .variant_3 {
   margin-left: -1px;
+  background: #fff;
 }
 .variant_3 .variant__top {
   background: url(../img/mb3.jpg) bottom center no-repeat;
@@ -1199,9 +1248,16 @@ h3 {
   color: #fff;
 }
 
+.row__title span {
+  color: #f523ad;
+}
+
 .calculator {
   padding: 30px 0;
   text-align: center;
+  border-top: 1px solid #f523ad;
+  border-bottom: 1px solid #f523ad;
+  margin-top: 30px;
 }
 .calculator input {
   font: 14px RR;
@@ -1224,11 +1280,28 @@ h3 {
   margin-right: 10px;
   color: #343434;
 }
+.calculator__text {
+  font: 18px RB;
+  display: inline-block;
+  margin-right: 10px;
+  /*margin-left: 10px;*/
+  color: #343434;
+  color: #f523ad;
+}
 .calculator__butt {
   display: inline-block;
+  margin-top: 30px;
 }
 .calculator .result {
-  margin-right: 20px;
+  font: 14px RR;
+  color: #343434;
+  background: transparent;
+  border: 1px solid #343434;
+  border-radius: 30px;
+  padding: 9.5px 32px;
+  margin-right: 12px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .sert {
@@ -1284,6 +1357,23 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.upbutton {
+  position: fixed;
+  right: 25px;
+  bottom: 25px;
+  max-width: 50px;
+  z-index: 15;
+  border-radius: 100%;
+  box-shadow: 0px 0px 26px 2px rgba(0, 0, 0, 0.49);
+  cursor: pointer;
+  visibility: hidden;
+}
+.upbutton:hover {
+  transition: 0.6s;
+  transform: rotate(1turn);
+  box-shadow: 0px 0px 46px 3px rgba(0, 0, 0, 0.49);
 }
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
