--- a/go6percent/scss/layout/_content.scss
+++ b/go6percent/scss/layout/_content.scss
@@ -124,7 +124,8 @@ h3{
 	padding: 40px 0;
 	&__item{
 		&:hover{
-			margin-top:-20px;
+			transform: scale(1.05);
+    		z-index: 5;
 			transition: 1s;
 		}
 	}
@@ -238,10 +239,12 @@ h3{
 	}
 	&_1{
 		margin-right: -1px;
+		background: #fff;
 	}
 	&_2{
 		padding-bottom: 55px;
 		box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.15);
+		background: #fff;
 		.variant__top{
 			background: url(../img/mb2.jpg) bottom center no-repeat;
 			min-height: 125px;
@@ -256,13 +259,13 @@ h3{
 			}
 		}
 		&:hover{
-			width: 360px;
-			margin-top: 0;
-			transition: 0.6s;
+			transform: scale(1.05);
+    		z-index: 5;
 		}
 	}
 	&_3{
 		margin-left: -1px;
+		background: #fff;
 		.variant__top{
 			background: url(../img/mb3.jpg) bottom center no-repeat;
 		}
@@ -506,9 +509,19 @@ h3{
 		}
 	}
 }
+.row{
+	&__title{
+		span{
+			color: #f523ad;
+		}
+	}
+}
 .calculator{
 	padding: 30px 0;
 	text-align: center;
+	border-top: 1px solid #f523ad;
+    border-bottom: 1px solid #f523ad;
+    margin-top: 30px;
 	input{
 		font: 14px RR;
 	    color: #343434;
@@ -530,11 +543,28 @@ h3{
 		margin-right: 10px;
 	    color: #343434;
 	}
+	&__text{
+		font: 18px RB;
+    	display: inline-block;
+    	margin-right: 10px;
+    	/*margin-left: 10px;*/
+    	color: #343434;
+    	color: #f523ad;
+	}
 	&__butt{
 		display: inline-block;
+		margin-top: 30px;
 	}
 	.result{
-		margin-right: 20px;
+		font: 14px RR;
+	    color: #343434;
+	    background: transparent;
+	    border: 1px solid #343434;
+	    border-radius: 30px;
+	    padding: 9.5px 32px;
+	    margin-right: 12px;
+	    text-align: center;
+	    margin-bottom: 10px;
 	}
 }
 .sert{
@@ -588,6 +618,22 @@ h3{
 		display: flex;
 		justify-content: center;
 		align-items: center;
+	}
+}
+.upbutton{
+	position: fixed;
+	right: 25px;
+	bottom: 25px;
+	max-width: 50px;
+	z-index: 15;
+	border-radius: 100%;
+	box-shadow: 0px 0px 26px 2px rgba(0,0,0,0.49);
+	cursor: pointer;
+	visibility: hidden;
+	&:hover{
+		transition: 0.6s;
+		transform: rotate(1turn);
+		box-shadow: 0px 0px 46px 3px rgba(0,0,0,0.49);
 	}
 }
 
