--- a/go6percent/scss/layout/_footer.scss
+++ b/go6percent/scss/layout/_footer.scss
@@ -29,6 +29,31 @@ footer{
 	&__a{
 		font: 15px RM;
 		color: #fff;
+		position: relative;
+		&:hover{
+			&:after{
+				opacity: 1;
+				-webkit-transform: translateY(0px);
+				-moz-transform: translateY(0px);
+				transform: translateY(0px);
+			}
+		}
+		&:after{
+				position: absolute;
+			    top: 100%;
+			    left: 0;
+			    width: 100%;
+			    height: 2px;
+			    background: rgba(255,255,255,0.8);
+			    content: '';
+			    opacity: 0;
+			    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+			    -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+			    transition: opacity 0.3s, transform 0.3s;
+			    -webkit-transform: translateY(10px);
+			    -moz-transform: translateY(10px);
+			    transform: translateY(10px);
+			}
 	}
 }
 .footerbott{
