--- a/go6percent/scss/layout/_content.scss
+++ b/go6percent/scss/layout/_content.scss
@@ -801,6 +801,9 @@ h3{
 		&__subtitle{
 			font-size: 16px;
 		}
+		&__title{
+			line-height: 35px;
+		}
 	}
 	.variants{
 		padding: 20px 0;
@@ -825,6 +828,9 @@ h3{
 				font-size: 12px;
 			}
 		}
+	}
+	.bitcoin{
+		display: none;
 	}
 	.sponsors{
 		flex-wrap: wrap;
@@ -864,6 +870,26 @@ h3{
 				margin: 0 5px;
 			}
 		}
+		&__img{
+			&_1{
+				left: 122px
+			}
+			&_2{
+				right: 122px;
+			}
+			&_3{
+				left: 122px;
+			}
+			&_4{
+				right: 122px;
+			}
+			&_5{
+				left: 121px;
+			}
+			&_6{
+				right: 121px;
+			}
+		}
 	}
 	.sert{
 		padding: 20px 0;
@@ -891,6 +917,15 @@ h3{
 	    &__item{
 	    	margin-bottom: 15px;
 	    }
+	}
+	.investors{
+		&__item{
+			&:first-child{
+				&:before{
+					left:12%;
+				}
+			}
+		}
 	}
 }
 
@@ -945,6 +980,9 @@ h3{
 		&__box{
 			position: static;
 			margin-bottom: 15px;
+			span{
+				font-size: 15px;
+			}
 		}
 	}
 	img.adv{
@@ -954,6 +992,9 @@ h3{
 				display: none;
 			}
 		}
+	}
+	.bitcoin{
+		display: none;
 	}
 	.investors{
 		padding: 40px 0;
@@ -965,6 +1006,11 @@ h3{
 			max-width: 320px;
 			width: 90%;
     		margin-bottom: 15px;
+    		&:first-child{
+    			&:before{
+    				left: 25px;
+    			}
+    		}
 		}
 	}
 	.sert{
