--- a/go6percent/scss/layout/_header.scss
+++ b/go6percent/scss/layout/_header.scss
@@ -26,6 +26,7 @@ header{
 .header{
 	position: relative;
 	background: url(../img/banner.jpg) center center no-repeat;
+	background-size: cover;
 	&__page{
 		background-image: url(../img/bp1.jpg);
 		/*background: linear-gradient(to right, #3a1439, #761157);*/
@@ -527,5 +528,8 @@ header{
    	 			padding: 0;
 			}
 		}
+	}
+	#myCanvasContainer{
+		display: none;
 	}
 }
