--- a/training2/scss/layout/_footer.scss
+++ b/training2/scss/layout/_footer.scss
@@ -74,6 +74,7 @@ footer{
 @media screen and (max-width: 767px) {
 	.continfo{
 		&__item {
+			min-width: 80px;
 			img{
 				max-width: 16px;
     			margin-right: 3px;
