--- a/training2/css/style.css
+++ b/training2/css/style.css
@@ -236,6 +236,9 @@ footer {
 }
 
 @media screen and (max-width: 767px) {
+  .continfo__item {
+    min-width: 80px;
+  }
   .continfo__item img {
     max-width: 16px;
     margin-right: 3px;
@@ -503,12 +506,15 @@ h3 {
   font: 1.8518518518518516VW HB;
   text-align: center;
   color: #fff;
-  display: inline-block;
-  padding: 2.8% 6.4% 2.8% 3.6%;
+  display: flex;
+  padding: 2.9% 6.4% 2.8% 3.6%;
   margin-bottom: 2.7%;
   background: url(../img/icon3-1.png) no-repeat;
   background-size: 100%;
   width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
 }
 .block3__title_9 {
   margin-bottom: 3.6%;
@@ -1006,6 +1012,7 @@ h3 {
   background: url(../img/banner11.jpg) center center no-repeat;
   background-size: cover;
   text-align: center;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3) inset;
 }
 .block11 .block3__title {
   margin-bottom: 1.7%;
@@ -1539,6 +1546,7 @@ div.wpcf7 .ajax-loader {
   }
   .block9__left, .block9__right {
     width: 48%;
+    padding-top: 5.6%;
   }
   .block9__left p, .block9__left li, .block9__right p, .block9__right li {
     font: 2.190476VW HR;
