--- a/training2/scss/layout/_content.scss
+++ b/training2/scss/layout/_content.scss
@@ -208,12 +208,15 @@ h3{
 		font: 1.8518518518518516VW HB;
 		text-align: center;
 		color: #fff;
-		display: inline-block;
-		padding: 2.8% 6.4% 2.8% 3.6%;
+		display: flex;
+		padding: 2.9% 6.4% 2.8% 3.6%;
 		margin-bottom: 2.7%;
 		background: url(../img/icon3-1.png) no-repeat;
 		background-size: 100%;
 		width: 50%;
+		margin-left: auto;
+		margin-right: auto;
+		justify-content: center;
 		&_9{
 			margin-bottom: 3.6%;
 		}
@@ -732,6 +735,7 @@ h3{
 	background: url(../img/banner11.jpg) center center no-repeat;
 	background-size: cover;
 	text-align: center;
+	box-shadow: 0 0 0 9999px rgba(0,0,0,0.3) inset;
 	.block3__title{
 		margin-bottom: 1.7%;
 	}
@@ -1291,6 +1295,7 @@ div.wpcf7 .ajax-loader{
 		}
 		&__left,&__right{
 			width: 48%;
+			padding-top: 5.6%;
 			p,li{
 				font: 2.190476VW HR;
 			}
