--- a/training2/css/style.css
+++ b/training2/css/style.css
@@ -378,7 +378,7 @@ h3 {
 }
 .block1__img {
   position: absolute;
-  left: 10%;
+  left: 16%;
   bottom: 0;
   max-width: 738px;
   width: 33%;
@@ -388,7 +388,7 @@ h3 {
   padding: 4% 0;
   position: absolute;
   bottom: 30px;
-  left: 23%;
+  left: 31%;
   background: url(../img/icon1-4.png) center center no-repeat;
   background-size: 100%;
   text-align: center;
@@ -401,7 +401,7 @@ h3 {
 .block1text {
   max-width: 34%;
   text-align: center;
-  margin-left: 43%;
+  margin-left: 49%;
 }
 
 .block1top {
@@ -554,6 +554,7 @@ h3 {
   display: inline-block;
   width: 100%;
   margin-bottom: 3%;
+  text-align: center;
 }
 .block3__info p {
   color: #231f20;
@@ -718,6 +719,7 @@ h3 {
 }
 .block6__info_h2 {
   font: 1.455026455026455VW HI;
+  text-align: left;
 }
 .block6__cont {
   border: 9px solid #ed1c24;
